# bopa-fetcher

./: AGENTS.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: development.md  getting-started.md  index.md
docs/api/: bopa-fetcher.md  py-bopa.md  pybopa.md
scripts/: example.html  run_bopa-fetcher.py  run_py-bopa.py  run_pybopa.py
src/bopa/: __init__.py  constants.py
src/bopa/api/: client.py
src/bopa/models/: article.py  bulletin.py
src/bopa/service/: article.py  bulletin.py  links.py
src/pybopa/: __init__.py  boletin.py  disposicion.py
src/pybopa/api/: client.py
src/pybopa/models/: __init__.py  bulletin.py
src/pybopa/service/: __init__.py  article.py  bulletin.py  links.py
tests/: __init__.py  conftest.py  test_article_service.py  test_bulletin_service.py  test_client.py  test_links.py  test_models.py
