[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bopa-fetcher"
version = "0.1.7"
description = "A Python library for fetching structured information from BOPA (Boletín Oficial del Principado de Asturias)."
readme = "README.md"
requires-python = ">=3.7"
license-files = ["LICENSE"]
authors = [
  {name = "Diego González Suárez", email = "gonzalezsdiego@uniovi.es"},
  {name = "Noelia Rico", email = "noeliarico@uniovi.es"},
  {name = "Irene Díaz", email = "sirene@uniovi.es"}
]
maintainers = [
  {name = "Diego González Suárez", email = "gonzalezsdiego@uniovi.es"},
]
keywords = ["official gazette", "asturian legislation", "data analysis", "policy research", "legal analytics", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Legal Industry",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing :: General",
]
license = "MIT"
dependencies = [
  "beautifulsoup4>=4.12.2",
  "matplotlib>=3.9.0",
  "numpy>=2.1.0",
  "pandas>=2.2.2",
  "requests>=2.33.0",
  "seaborn>=0.13.2"
]


[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://diegoglezsu.github.io/bopa-fetcher"
Documentation = "https://diegoglezsu.github.io/bopa-fetcher"
Repository = "https://github.com/diegoglezsu/bopa-fetcher.git"
Issues = "https://github.com/diegoglezsu/bopa-fetcher/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
